Dark mode fix

--- a/src/components/Articles/styles.css
+++ b/src/components/Articles/styles.css
@@ -21,7 +21,5 @@
     color: #fff;
 }
 
-.article-sub-title {
-  color: #b4b4b4 !important;
-}
+
 
